
  [ Peter Samuelson ]
  * Ship apache2.8 manpage in apache2.2-common.  (Closes: #391813)
  * Rearrange init script so that 'force-reload' is the same as 'reload'.
    (Closes: #401053)
  * Add Build-Depends: mawk.  (Closes: #403682)
  * Add a needed <IfModule mod_include.c> guard to apache2.conf.
    (Closes: #407307)
  * Stop shipping /var/run/apache2/ as it is created at runtime anyway.

 -- Thom May <thom@debian.org>  Sat, 28 Apr 2007 11:32:14 +0200

apache2 (2.2.3-4) unstable; urgency=high

  * High-urgency upload for RC bugfixes.
  * Ack NMUs - thanks Andi, Steve.
  * Add myself to Uploaders.
  * Refactor apache2.2-common.postinst slightly, to account for sarge
    upgrades (since it's a new package name, rather than an upgrade).
    (Closes: #396782, #415775)
  * If mod_proxy was configured in sarge, add proxy_http and
    disk_cache modules, which used to be included in the mod_proxy config.
    (Closes: #407171)

 -- Peter Samuelson <peter@p12n.org>  Tue, 27 Mar 2007 07:06:49 -0500

apache2 (2.2.3-3.3) unstable; urgency=high

  * Non-maintainer upload.
  * High-urgency upload for RC bugfix.
  * apache2.2-common should depend on procps, since it will fail to create
    httpd.conf if it's not installed.  Closes: #398535.

 -- Steve Langasek <vorlon@debian.org>  Mon,  5 Feb 2007 01:55:57 -0800

apache2 (2.2.3-3.2) unstable; urgency=high

  * Non-maintainer upload.
  * 043_ajp_connection_reuse: Patch from upstream Bugzilla, fixing a critical
    issue with regard to connection reuse in mod_proxy_ajp.
    Closes: #396265

 -- Andreas Barth <aba@not.so.argh.org>  Sat,  9 Dec 2006 21:05:45 +0000

apache2 (2.2.3-3.1) unstable; urgency=low

  * Non-maintainer upload.
  * Enable authz_user by default, fix silent authentication breakage.
    Closes: #397310
  * Add default modules if coming from earlier than this version.
    Closes: #392349, #392352, #392701, #393913, #396678, #395976
  * Re-Enable modules cern_meta, dumpio and ext_filter. Closes: #391393
