@@ -25,6 +25,9 @@ apache2 (2.2.3-5) UNRELEASED; urgency=low
   * Add a needed <IfModule mod_include.c> guard to apache2.conf.
     (Closes: #407307)
   * Stop shipping /var/run/apache2/ as it is created at runtime anyway.
+  * Move the /var/lock/apache2 owner fix from the apache2.2-common
+    postinst to the init script, as /var/lock may not persist across
+    reboots.  (Closes: #420101)
 
  -- Thom May <thom@debian.org>  Sat, 28 Apr 2007 11:32:14 +0200
 
